Closed Bug 268482 Opened 21 years ago Closed 21 years ago

###!!! ASSERTION: You are calling CreateInstance "@mozilla.org/xmlextras/schemas/schemaloader;1" when a service for this CID already exists!

Categories

(Core Graveyard :: Web Services, defect)

x86
Windows XP
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.8beta2

People

(Reporter: timeless, Assigned: timeless)

References

()

Details

(Keywords: assertion)

Attachments

(1 obsolete file)

###!!! ASSERTION: You are calling CreateInstance "@mozilla.org/xmlextras/schemas/schemaloader;1" when a service for this CID already exists! Add it to abusedContracts to track down the service consumer.: 'Error', file r:/mozilla/xpcom/components/nsComponentManager.cpp, line 1962 Break: at file r:/mozilla/xpcom/components/nsComponentManager.cpp, line 1962 this was sorta mentioned in bug 244952 comment 10. i don't really care what you do, but someone should pick one or the other. I'll pick (randomly) if no one else does. xpcom_core.dll!nsDebug::Assertion(const char * aStr=0x03033a20, const char * aExpr=0x00388354, const char * aFile=0x0038ffc4, int aLine=0x000007aa) Line 109 C++ xpcom_core.dll!nsComponentManagerImpl::CreateInstanceByContractID(const char * aContractID=0x003f7e10, nsISupports * aDelegate=0x00fe0068, const nsID & aIID={...}, void * * aResult=0x0039006c) Line 1962 + 0x17 C++ xpcom_core.dll!nsCreateInstanceByContractID::operator()(const nsID & aIID={...}, void * * aInstancePtr=0x0012f28c) Line 76 + 0x1a C++ > websrvcs.dll!nsCOMPtr<nsISchemaLoader>::assign_from_helper(const nsCOMPtr_helper & helper={...}, const nsID & aIID={...}) Line 1051 + 0x10 C++ websrvcs.dll!nsCOMPtr<nsISchemaLoader>::nsCOMPtr<nsISchemaLoader>(const nsCOMPtr_helper & helper={...}) Line 590 C++ websrvcs.dll!nsSOAPEncodingRegistry::GetSchemaCollection(nsISchemaCollection * * aSchemaCollection=0x0012f738) Line 135 C++ websrvcs.dll!nsSOAPEncoding::GetSchemaCollection(nsISchemaCollection * * aSchemaCollection=0x0012f738) Line 212 C++ websrvcs.dll!nsDefaultEncoder::Decode(nsISOAPEncoding * aEncoding=0x02f91928, nsIDOMElement * aSource=0x03034b7c, nsISchemaType * aSchemaType=0x00000000, nsISOAPAttachments * aAttachments=0x00000000, nsIVariant * * _retval=0x030339d0) Line 1986 + 0x1d C++ websrvcs.dll!nsSOAPEncoding::Decode(nsIDOMElement * aSource=0x03034b7c, nsISchemaType * aSchemaType=0x02efa768, nsISOAPAttachments * aAttachments=0x00000000, nsIVariant * * _retval=0x02dc779c) Line 337 + 0x19 C++ websrvcs.dll!nsSOAPBlock::GetValue(nsIVariant * * aValue=0x0012fa28) Line 173 + 0x31 C++ websrvcs.dll!WSPCallContext::CallCompletionListener() Line 355 + 0x19 C++ websrvcs.dll!WSPCallContext::HandleResponse(nsISOAPResponse * aResponse=0x02f2fbec, nsISOAPCall * aCall=0x02f9189c, unsigned int status=0x00000000, int aLast=0x00000001, int * _retval=0x0012fb94) Line 156 C++ websrvcs.dll!nsHTTPSOAPTransportCompletion::HandleEvent(nsIDOMEvent * aEvent=0x0039006c) Line 534 C++ xmlextras.dll!nsXMLHttpRequest::NotifyEventListeners(nsIDOMEventListener * aHandler=0x030b1290, nsISupportsArray * aListeners=0x00000001, nsIDOMEvent * aEvent=0x03045d28) Line 814 C++ xmlextras.dll!nsXMLHttpRequest::RequestCompleted() Line 1372 C++ xmlextras.dll!nsXMLHttpRequest::OnStopRequest(nsIRequest * request=0x030d3588, nsISupports * ctxt=0x00000000, unsigned int status=0x00000000) Line 1318 C++ necko.dll!nsHttpChannel::OnStopRequest(nsIRequest * request=0x02f08b98, nsISupports * ctxt=0x00000000, unsigned int status=0x00000000) Line 3760 C++ necko.dll!nsInputStreamPump::OnStateStop() Line 505 C++ necko.dll!nsInputStreamPump::OnInputStreamReady(nsIAsyncInputStream * stream=0x03090830) Line 342 C++ xpcom_core.dll!nsInputStreamReadyEvent::EventHandler(PLEvent * plevent=0x02f69ebc) Line 119 C++ xpcom_core.dll!PL_HandleEvent(PLEvent * self=0x02f69ebc) Line 693 C xpcom_core.dll!PL_ProcessPendingEvents(PLEventQueue * self=0x01066650) Line 628 C xpcom_core.dll!_md_EventReceiverProc(HWND__ * hwnd=0x012a1824, unsigned int uMsg=0x0000c14e, unsigned int wParam=0x00000000, long lParam=0x01066650) Line 1434 C user32.dll!77d43a50() user32.dll!77d43b1f() user32.dll!GetMessageW() + 0x125 user32.dll!DispatchMessageW() + 0xb appcomps.dll!nsAppStartup::Run() Line 221 C++ mozilla.exe!main1(int argc=0x00fe0068, char * * argv=0x00000009, nsISupports * nativeApp=0x0039006c) Line 1322 C++ mozilla.exe!main(int argc=0x00000001, char * * argv=0x003f7b80) Line 1813 + 0x16 C++ mozilla.exe!mainCRTStartup() Line 400 + 0x11 C kernel32.dll!TermsrvAppInstallMode() + 0x269
Whiteboard: Pick a random choice, post the patch, force it into cvs
Target Milestone: --- → mozilla1.8alpha6
Attached patch service (obsolete) — Splinter Review
Assignee: web-services → timeless
Status: NEW → ASSIGNED
Attachment #177863 - Flags: superreview?(peterv)
Attachment #177863 - Flags: review?(doronr)
Comment on attachment 177863 [details] [diff] [review] service r=me
Attachment #177863 - Flags: review?(doronr) → review+
Attachment #177863 - Flags: superreview?(peterv) → superreview+
Summary: ###!!! ASSERTION: You are calling CreateInstance "@mozilla.org/xmlextras/schemas/schemaloader;1" when a service for this CID already exists! Add it to abusedContracts to track down the service consumer.: 'Error' file r:/mozilla/xpcom/components/nsComponen… → ###!!! ASSERTION: You are calling CreateInstance "@mozilla.org/xmlextras/schemas/schemaloader;1" when a service for this CID already exists!
Target Milestone: mozilla1.8alpha6 → mozilla1.8beta2
Comment on attachment 177863 [details] [diff] [review] service mozilla/extensions/webservices/soap/src/nsSOAPEncoding.cpp 1.33
Attachment #177863 - Attachment is obsolete: true
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Whiteboard: Pick a random choice, post the patch, force it into cvs
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: