Bug 268482 ###!!! ASSERTION: You are calling CreateInstance "@mozilla.org/xmlextras/schemas/schemaloader;1" when a service for this CID already exists! r=doron sr=peterv